--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,13 +1,14 @@
 .main{
-  background-color: #fff;
+  background:linear-gradient(135deg, #ffffff, #cacaca33);
   padding: 30px;
   margin: 50px auto;
   max-width: 500px;
-  border-radius: 4px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .main h1{
-  font-size: 20px;
+  font-size: 28px;
+  color: #333;
   text-align: center;
 }
